[gd_scene load_steps=3 format=2]

[ext_resource path="res://assets/theme/gdquest.theme" type="Theme" id=1]
[ext_resource path="res://CraftingUI.gd" type="Script" id=2]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Inventory" type="Panel" parent="."]
margin_left = 16.0
margin_top = 61.0
margin_right = 259.0
margin_bottom = 584.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ItemList" type="ItemList" parent="Inventory"]
margin_left = 8.0
margin_top = 8.0
margin_right = 236.0
margin_bottom = 515.0
select_mode = 1
max_columns = 4
same_column_width = true
icon_mode = 0
icon_scale = 2.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Craftable" type="Panel" parent="."]
margin_left = 347.0
margin_top = 224.0
margin_right = 427.0
margin_bottom = 325.0

[node name="ItemList" type="ItemList" parent="Craftable"]
margin_left = 9.0
margin_top = 8.0
margin_right = 70.0
margin_bottom = 93.0
max_columns = 4
same_column_width = true
icon_mode = 0
icon_scale = 2.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="InventoryLabel" type="Label" parent="."]
margin_left = 20.0
margin_top = 28.0
margin_right = 135.0
margin_bottom = 59.0
theme = ExtResource( 1 )
text = "Inventory"

[node name="CraftableLabel" type="Label" parent="."]
margin_left = 335.0
margin_top = 182.0
margin_right = 450.0
margin_bottom = 213.0
theme = ExtResource( 1 )
text = "Craftable"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="."]

[connection signal="item_selected" from="Inventory/ItemList" to="." method="_on_ItemList_item_selected"]
[connection signal="multi_selected" from="Inventory/ItemList" to="." method="_on_ItemList_multi_selected"]
[connection signal="item_activated" from="Craftable/ItemList" to="." method="_on_ItemList_item_activated"]
[connection signal="tween_completed" from="Tween" to="." method="_on_Tween_tween_completed"]
